--- a/component.html
+++ b/component.html
@@ -9,11 +9,11 @@ title: Home
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="/public/css/graphPage.css">
-        <link rel="stylesheet" href="/public/css/loading.css">
-        <link rel="stylesheet" href="/public/css/vanillaSelectBox.css">
+        <link rel="stylesheet" href="public/css/graphPage.css">
+        <link rel="stylesheet" href="public/css/loading.css">
+        <link rel="stylesheet" href="public/css/vanillaSelectBox.css">
 
-        <script src="/public/js/vanillaSelectBox.js"></script>
+        <script src="public/js/vanillaSelectBox.js"></script>
         <script src="https://d3js.org/d3.v4.js"></script>
         <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     </head>
@@ -66,6 +66,6 @@ title: Home
             <div class='graph' id="commenters"></div>
         </div>
 
-        <script src="/public/js/component.js"></script>
+        <script src="public/js/component.js"></script>
     </body>
 </html>
